# cartelfurypcgame

./: README  example.pyw  index.html  pyproject.toml  requirements-dev.in  requirements-win.txt  requirements.in  requirements.txt  workflow.yml
css/css/: bootstrap.min.css  main.css
js/js/: main.js
